# NL2GraphQL

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.toml  run_smoke.py
.codex/: config.toml
.github/workflows/: ci.yml
public/: demo_charts_redesigned.js  demo_redesigned.html  eval-dashboard.html  eval_dashboard.js  index.html
src/: agent.rs  answer_synthesis.rs  capabilities.rs  domain_config.rs  entity_linker.rs  error.rs  history.rs  intermediate_representation.rs  introspection.rs  main.rs  mcp.rs  metric_formula.rs  openai.rs  pipeline.rs  plan_v2_tests.rs  planner.rs  planner_cache.rs  policy_guard.rs  progress.rs  prompt_examples.rs  prompts.rs  provider.rs  query_executor.rs  query_repair.rs  schema_registry.rs  service.rs  sls.rs  sls_derive.rs  transformations.rs
