[package]
name = "zephyr-agent"
version = "0.1.0"
edition = "2024"
authors = ["Sambaclab"]
description = "An intelligent GraphQL agent powered by LLMs"

[package.metadata.cargo-machete]
ignored = ["clap", "rig-core"]

[features]
default = []
swagger-ui = ["dep:utoipa-swagger-ui"]

[dependencies]
anyhow = "1"
async-stream = "0.3.6"
axum = { version = "0.7", features = ["macros"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["std"] }
clap = { version = "4", features = ["env", "derive"] }
futures = "0.3"
graphql-parser = "0.4"
hmac = "0.12"
rclap = "0.3"
regex = "1"
once_cell = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rig-core = "0.27.0"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
utoipa = "5"
utoipa-swagger-ui = { version = "8", features = ["axum"], optional = true }
uuid = { version = "1", features = ["v4"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
